<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/editor_scene"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp">
        </Space>

        <LinearLayout
            android:id="@+id/layout_editor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/back" />

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="android:autofillHints"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/text_editor_title_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_editor_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="android:autofillHints"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/text_editor_content_hint"
                android:inputType="textMultiLine"
                android:layout_weight="@integer/material_motion_duration_medium_1"
                android:singleLine="false" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="24dp">
            </Space>

            <LinearLayout
                android:id="@+id/layout_editor_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="#52CF4D"
                    android:text="@string/text_editor_save" />

                <Button
                    android:id="@+id/button_export"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="48dp"
                    android:backgroundTint="#0F88F3"
                    android:text="@string/text_editor_export" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp">
            </Space>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#B3B3B3"
                android:text="@string/text_editor_delete"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>