<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#574BC1"
            android:singleLine="true"
            android:text="@string/main_view_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editText_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:singleLine="true"
            android:text="@string/main_view_catalog"
            android:textAlignment="center"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_title_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_weight="@integer/material_motion_duration_medium_1">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/text_editor_create" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>